--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
 :root{
-   --blue:#2980b9;
-   --red:tomato;
-   --orange:orange;
+    --1: #10002B;
+    --2 :#240046;
+    --3 :#3C096C;
+    --4 :#5A189A;
+    --5 :#7B2CBF;
+    --6 :#9D4EDD;
+    --7 :#C77DFF;
+    --8 :#E0AAFF;
    --black:#333;
    --white:#fff;
    --bg-color:#eee;
@@ -25,8 +30,168 @@ html {
     font-size: 62.5%;
     overflow-x: hidden;
 }
-
+section {
+    padding: 2rem;
+}
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: var(--6);
+    padding:  0.6rem 0.8rem;
+    border-radius: 8px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+} 
+input[type=file]::file-selector-button:hover {
+    background: var(--5);
+}
 .container {
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.header {
+    background-color: var(--2);
+    position: sticky;
+    top: 0; left: 0;
+    z-index: 1000;
+}
+.btn,
+.option-btn,
+.delete-btn {
+    display: block;
+    width: 100%;
+    text-align: center;
+    background-color: var(--6);
+    color: var(--bg-color);
+    font-size: 1.7rem;
+    padding: 1.2rem 3rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    transition: background .2s ease-in-out;
+}
+.btn:hover,
+.option-btn:hover,
+.delete-btn:hover{
+    background-color: var(--5);
+}
+.option-btn {
+    background-color: var(--6);
+}
+.delete-btn{
+    margin-top: 0;
+    background-color: var(--5);
+}
+
+.header .flex {
+    display: flex;
+    align-items: center;
+    padding: 1.5rem 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header .flex .logo {  
+    margin-right: auto;
+    font-size: 2.5rem;
+    color: var(--bg-color);
+}
+
+.header .flex .navbar a{
+    margin-left: 2rem;
+    font-size: 2rem;
+    color: var(--bg-color);
+    transition: color .2s ease-in-out;
+}
+.header .flex .navbar a:hover {
+    color: var(--8);
+}
+.header .flex .cart{
+    margin-left: 2rem;
+    font-size: 2rem;
+    color: var(--bg-color);
+    transition: color .2s ease-in-out;
+}
+.header .flex .cart:hover {
+    color: #e0c3fc;
+}
+.header .flex .cart span {
+    padding: .1rem .5rem;
+    border-radius: .5rem;
+    background-color: var(--bg-color);
+    color: var(--2);
+    font-size: 2rem;
+}
+
+#menu-btn {
+    margin-left: 2rem;
+    font-size: 3rem;
+    cursor: pointer;
+    color: var(--bg-color);
+    display: none;
+}
+
+.add-product-form {
+    max-width: 50rem;
+    background-color: var(--bg-color);
+    border-radius: .5rem;
+    padding: 2rem;
+    margin: 0 auto;
+    margin-top: 2rem;
+}
+
+.add-product-form h3 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.add-product-form .box {
+    text-transform: none;
+    padding: 1.2rem 1.4rem;
+    font-size: 1.7rem;
+    color: var(--black);
+    border-radius: .5rem;
+    background-color: var(--white);
+    margin: 1rem 0;
+    width: 100%;
+}
+
+@media (max-width:991px){
+    #menu-btn {
+        display: inline-block;
+        transition: .2s linear;
+    }
+    #menu-btn.fa-times {
+        transform: rotate(180deg);
+    }
+    .header .flex .navbar {
+        position:  absolute;
+        top: 99%; left: 0; right: 0;
+        background-color: var(--2);
+        clip-path: polygon(0 0, 100% 0,100% 0,0 0);
+    }
+    .header .flex .navbar.active {
+        clip-path: polygon(0 0,100% 0,100% 100%,0% 100%);
+    }
+    .header .flex .navbar a {
+        margin: 2rem;
+        display: block;
+        text-align: center;
+        font-size: 2.5rem;
+    }
+}
+@media (max-width:768px){
+    html {
+        font-size: 55%;
+    }
+}
+@media (max-width:450px){
+    html {
+        font-size: 50%;
+    }
 }
